--- a/src/chirp_ui/templates/chirpui/comment.html
+++ b/src/chirp_ui/templates/chirpui/comment.html
@@ -1,6 +1,8 @@
 {#- chirp-ui: Comment component
     Nested comment with avatar, author, body, optional replies link.
 
+    Named slot: actions (footer actions, e.g. Reply button).
+
     Usage:
         from "chirpui/comment.html" import comment, comment_thread
         from "chirpui/avatar.html" import avatar
@@ -9,8 +11,9 @@
             <p>Great post! Thanks for sharing.</p>
         end
 
-        call comment(author="Bob", time="2h ago", replies_url="/post/1?replies=1", replies_count=3)
+        call comment(author="Bob", time="2h ago")
             <p>I agree with this.</p>
+            {% slot actions %}<a href="/reply">Reply</a>{% end %}
         end
 -#}
 
@@ -33,11 +36,12 @@
     <div class="chirpui-comment__body">
         {% slot %}
     </div>
-    {% if replies_url and replies_count %}
-    <footer class="chirpui-comment__replies">
+    <footer class="chirpui-comment__footer">
+        {% if replies_url and replies_count %}
         <a href="{{ replies_url }}" class="chirpui-comment__replies-link">View {{ replies_count }} {{ "reply" if replies_count == 1 else "replies" }}</a>
+        {% end %}
+        <div class="chirpui-comment__actions">{% slot actions %}</div>
     </footer>
-    {% end %}
 </article>
 {% end %}
 
