--- a/src/chirp_ui/templates/chirpui/infinite_scroll.html
+++ b/src/chirp_ui/templates/chirpui/infinite_scroll.html
@@ -23,8 +23,10 @@
     </div>
     {% else %}
     <div class="chirpui-infinite-scroll__loading chirpui-infinite-scroll__loading--skeleton" hx-indicator>
+        {% slot loading %}
         {% from "chirpui/skeleton.html" import skeleton %}
         {{ skeleton(variant="card") }}
+        {% end %}
     </div>
     {% end %}
 </div>
